# stm32g474-flash-test

./: Cargo.toml  memory.x
.cargo/: config
src/: main.rs
