[package]
name = "stm32g474-flash-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-rtic = "1.1.4"
cortex-m-semihosting = "0.5"
panic-halt = "0.2.0"
heapless = "0.7.16"
flem = "0.5"

[dependencies.stm32g4xx-hal]
path = "./stm32g4xx-hal" # local if needed
# version = "0.0.1"
features = ["stm32g474", "rt"]